# arte

./: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/src/fundamental/: compression.rs  mod.rs  packets.rs  varint.rs
crates/protocol/src/model/: mod.rs
crates/protocol/src/phases/: handshaking.rs  login.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
