[package]
name = "arte-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
async-std.workspace = true
bytes.workspace = true
thiserror.workspace = true
async-compression = { version = "0.4", features = ["futures-io", "zlib"] }
uuid = { version = "1.6.1", features = ["v3"] }
serde.workspace = true
serde_json.workspace = true
